Fixes path on news landing images and updates font size on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1118,13 +1118,23 @@ body {
 
 .news .all-news .post {
   border-bottom: 0.0625em solid #E9E9E9;
-  padding: 3em; }
+  padding: 1em; }
+  @media screen and (min-width: 40em) {
+    .news .all-news .post {
+      padding: 3em; } }
 .news .all-news .post h2 {
-  font-size: 1.5em; }
+  font-size: 1.25em; }
+  @media screen and (min-width: 40em) {
+    .news .all-news .post h2 {
+      font-size: 1.5em; } }
 .news .all-news .post img {
-  float: left;
-  max-width: 40%;
-  margin-right: 1em; }
+  min-width: 100%; }
+  @media screen and (min-width: 40em) {
+    .news .all-news .post img {
+      float: left;
+      max-width: 40%;
+      min-width: 40%;
+      margin-right: 1em; } }
 
 .post .post-content {
   margin-bottom: 5em; }
